from controller.resource import Resource


class Folder(Resource):
    title: str
